--- a/src/layouts/app/setting/setting.module.scss
+++ b/src/layouts/app/setting/setting.module.scss
@@ -1,7 +1,7 @@
 @import "../../../scss/base/variables";
 
 .setting {
-  padding: 2rem;
+  padding: 5rem 2rem;
   background-color: $color-dark;
   display: flex;
   flex-direction: column;
